Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-111105

QT_WIDGETS_HIGHDPI_DOWNSCALE doesn't work with QOpenGLWidget

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P2: Important
    • 6.5.3, 6.6.0
    • 6.4.0, 6.4.1, 6.4.2
    • GUI: High-DPI, GUI: OpenGL
    • None
    • 433d67e76 (dev), 3513c1804 (6.5)

    Description

      The reason seem to be QOpenGLWidget::metric reimplementation: if I comment it out, it starts to work like a charm. It seems mostly be identical to the QWidget one, using QScreen methods rather than QWindow ones and lacking analogues of recent changes to QWidget::metric, is there any reason to have the reimplementation?

      Attachments

        1. screenshot-1.png
          472 kB
          Ilya Fedin
        2. screenshot-2.png
          476 kB
          Ilya Fedin
        3. QTBUG-111105.zip
          5 kB
          Ilya Fedin
        For Gerrit Dashboard: QTBUG-111105
        # Subject Branch Project Status CR V

        Activity

          People

            sorvig Morten Sørvig
            ilya-fedin Ilya Fedin
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes