Make QOpenGLWidget work with QT_WIDGETS_HIGHDPI_DOWNSCALE

Get the DPR from QWidget::metric(), which has a code path
for handling the QT_WIDGETS_HIGHDPI_DOWNSCALE case.

Fixes: QTBUG-111105
Change-Id: I821cbdf00423de211719173ae5c0af7b76594f60
Reviewed-by: Eirik Aavitsland <eirik.aavitsland@qt.io>
(cherry picked from commit 433d67e767478ce946cd04d8ad4ff73051c14773)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>